增加编辑、删除、获取列表接口
